--- a/package.json
+++ b/package.json
@@ -12,7 +12,16 @@
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
-    "react-native-web": "~0.11.7"
+    "react-native-web": "~0.11.7",
+    "intl": "^1.2.5",
+    "expo-font": "~8.1.0",
+    "@react-navigation/native": "^5.1.4",
+    "@react-navigation/stack": "^5.2.9",
+    "@use-expo/font": "^2.0.0",
+    "axios": "^0.19.2",
+    "date-fns": "^2.11.1",
+    "expo-constants": "~9.0.0",
+    "react-native-toastjs": "^1.0.1"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.1.0",
