--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-responsive-screen": "^1.4.1",
     "react-native-safe-area-context": "0.7.3",
     "react-native-screens": "2.2.0",
+    "react-native-snap-carousel": "^3.9.0",
     "react-native-toastjs": "^1.0.1",
     "react-native-web": "~0.11.7",
     "styled-components": "^5.0.1"
