--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react-native-snap-carousel": "^3.9.0",
     "react-native-toastjs": "^1.0.1",
     "react-native-web": "~0.11.7",
-    "styled-components": "^5.0.1"
+    "styled-components": "^5.0.1",
+    "react-native-svg": "11.0.1"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.1.0",
