--- a/package.json
+++ b/package.json
@@ -9,16 +9,20 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^10.0.0",
+    "@expo/videoplayer": "^0.4.0",
+    "@react-native-community/async-storage": "^1.10.0",
     "@react-native-community/datetimepicker": "2.2.2",
     "@react-native-community/masked-view": "0.1.6",
-    "@react-navigation/native": "^5.1.4",
-    "@react-navigation/stack": "^5.2.9",
+    "@react-navigation/drawer": "^5.6.4",
+    "@react-navigation/native": "^5.2.1",
+    "@react-navigation/stack": "^5.2.16",
     "@use-expo/font": "^2.0.0",
     "axios": "^0.19.2",
     "date-fns": "^2.11.1",
     "expo": "~37.0.3",
     "expo-constants": "~9.0.0",
     "expo-font": "~8.1.0",
+    "immer": "^6.0.5",
     "intl": "^1.2.5",
     "lottie-react-native": "~2.6.1",
     "react": "~16.9.0",
@@ -30,12 +34,21 @@
     "react-native-reanimated": "~1.7.0",
     "react-native-responsive-screen": "^1.4.1",
     "react-native-safe-area-context": "0.7.3",
-    "react-native-screens": "2.2.0",
+    "react-native-screens": "~2.2.0",
     "react-native-snap-carousel": "^3.9.0",
+    "react-native-svg": "11.0.1",
     "react-native-toastjs": "^1.0.1",
     "react-native-web": "~0.11.7",
+    "react-redux": "^7.2.0",
+    "reactotron-react-native": "^5.0.0",
+    "reactotron-redux": "^3.1.3",
+    "reactotron-redux-saga": "^4.2.3",
+    "redux": "^4.0.5",
+    "redux-persist": "^6.0.0",
+    "redux-saga": "^1.1.3",
     "styled-components": "^5.0.1",
-    "react-native-svg": "11.0.1"
+    "expo-av": "~8.1.0",
+    "react-native-webview": "8.1.1"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.1.0",
